--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ a.nav-link {
     font-size: 26px;
     font-weight: 900;
 }
-/* 
+
 .container_tourniquet{
     background-color: #cc96e1;
 }
@@ -50,4 +50,6 @@ button{
     font-size: 26px;
 }
 
-     */
+textarea {
+    border-radius: 30px;
+}
